log
Thu 16 May 2024 07:57:00 PM UTC: 
 tests:  0|5
total_score: 0/70
6ae6922
Thu 16 May 2024 08:03:04 PM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:62:32: error: expected ‘)’ before ‘{’ token
   62 |             if(n->sudo[i][j]==0{
      |               ~                ^
      |                                )
sudoku.c:67:9: error: expected expression before ‘}’ token
   67 |         }
      |         ^
Compilation failed
9dfe7a5
Thu 16 May 2024 08:03:36 PM UTC: 
 sudoku.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
ef95d24
Thu 16 May 2024 08:03:49 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
5c565e5
Thu 16 May 2024 08:03:59 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2c79763
Thu 16 May 2024 08:04:06 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
75dd581
Thu 16 May 2024 08:07:33 PM UTC: 
 sudoku.c | 36 ++++++++++++++++++++++++++++++++++++
 1 file changed, 36 insertions(+)
 tests:  3|4
total_score: 20/70
d35bb7d
Thu 16 May 2024 08:10:23 PM UTC: 
 sudoku.c | 19 ++++++++-----------
 1 file changed, 8 insertions(+), 11 deletions(-)
 tests:  4|3
total_score: 30/70
a1d3b98
Thu 16 May 2024 08:14:01 PM UTC: 
 sudoku.c | 39 +++++++++++++++++++++++++++++----------
 1 file changed, 29 insertions(+), 10 deletions(-)
 tests:  6|2
total_score: 45/70
d5ba0e0
Sat 18 May 2024 10:30:35 PM UTC: 
 sudoku.c | 36 +++++++++++++++++++++++++++++++++++-
 1 file changed, 35 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
008a64d
Sat 18 May 2024 10:30:58 PM UTC: 
 sudoku.c | 45 +++++++++++++++++++++++++++++----------------
 1 file changed, 29 insertions(+), 16 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:160:17: error: ‘Node’ has no member named ‘is_goal’
  160 |         if (node->is_goal) { // Verificar si el nodo es un estado final
      |                 ^~
sudoku.c:167:33: error: ‘Node’ has no member named ‘num_neighbors’
  167 |         for (int i = 0; i < node->num_neighbors; i++) {
      |                                 ^~
sudoku.c:168:29: error: ‘Node’ has no member named ‘neighbors’
  168 |             push(stack, node->neighbors[i]); // Agregar los nodos adyacentes al stack
      |                             ^~
sudoku.c:173:18: error: ‘Node’ has no member named ‘neighbors’
  173 |         free(node->neighbors); // Liberar la memoria de los vecinos
      |                  ^~
Compilation failed
06bf8f5
